--- a/Javascript-inicial/Aula 02/mat.css
+++ b/Javascript-inicial/Aula 02/mat.css
@@ -11,8 +11,8 @@ body{
    justify-content: center;
    margin-top: 20px;
    gap: 20px;
-   background-color: rgb(83, 137, 217);
-   color: #1c008e;
+   background-color: rgb(75, 75, 75);
+   color: #000000;
    padding-bottom: 20px;
 }
 h1{
@@ -41,7 +41,7 @@ section{
 
 h2{
     margin-bottom: 14px;
-    color: #0d009e;
+    color: #000000;
     font-family: cursive;
 }
 
@@ -49,10 +49,10 @@ button{
     margin-top: 14px;
     background: transparent;
     border: none;
-    border: 2px solid #507b88;
+    border: 2px solid #04ff19;
     border-radius: 999px;
     padding: 10px;
-    color: #931414;
+    color: #000000;
     font-weight: bold;
     opacity: 0.6;
     transition: all 200ms ease-in-out;
