--- a/Javascript-inicial/Exercicios/EX01/style.css
+++ b/Javascript-inicial/Exercicios/EX01/style.css
@@ -1,5 +1,24 @@
 *{
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
+
+}
+
+
+h1{
+    min-width: 100vh;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1vh;
+}
+
+
+label{
+    width: 100vh;
+    text-align: center;
+    margin-top: auto;
 }
 
