--- a/Javascript-inicial/Exercicio1/style.css
+++ b/Javascript-inicial/Exercicio1/style.css
@@ -3,24 +3,21 @@
     margin: 0;
 
 
-}
-
-.img-logo{
-    width: 70px;
-    height: auto;
-
-
 
 }
+main{
+    background-color: rgb(119, 224, 114);
+}
+
 
 .navbar{
-    background-color: rgb(0, 0, 0) !important;
+    background-color: rgb(255, 255, 255) !important;
 }
 
 .nav-link{
-
-        color: aliceblue  !important;
-
+    
+    color: rgb(0, 0, 0)  !important;
+    
 }
 
 section{
@@ -28,7 +25,65 @@ section{
     height: auto;
     
 }
+.s1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 5vh;
+    background-image: url("./assets/AssinaturaNey.png");
+    background-size: 100px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
 
+h1{
+    color: rgb(0, 0, 0);
+    text-align: center;
+
+}
+
+.carousel-inner{
+    
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: auto;
+
+}
+
+.carousel-item img{
+    max-width: 100%;
+    max-height: 100%;
+    margin: auto;
+    box-shadow: rgba(255, 234, 234, 0.35) 0px 5px 15px;
+}
+
+.img-logo{
+
+    width: 70px;
+    height: auto;
+
+}
+
+.card{
+    background-color: #020202a9;
+    width: 16rem;
+    height:450px;
+    border: 2px solid #ffffff;
+    border-radius: 10px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.wrap-img{
+    width: 400px;
+    overflow: hidden;
+    border-radius: 100%;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
 
 
 
