--- a/Javascript-inicial/Exercicio1/style.css
+++ b/Javascript-inicial/Exercicio1/style.css
@@ -64,8 +64,8 @@ h1{
     height: auto;
 
 }
-
 .card{
+ 
     background-color: #020202a9;
     width: 16rem;
     height:450px;
@@ -77,13 +77,12 @@ h1{
     align-items: center;
     justify-content: center;
 }
+#s2{
+   
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    flex-wrap: wrap;
 
-.wrap-img{
-    width: 400px;
-    overflow: hidden;
-    border-radius: 100%;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
-
-
-
