--- a/Javascript-inicial/Exercicio1/style.css
+++ b/Javascript-inicial/Exercicio1/style.css
@@ -6,12 +6,14 @@
 
 }
 main{
-    background-color: rgb(119, 224, 114);
+        background: rgb(85,246,122);
+        background: linear-gradient(180deg, rgba(85,246,122,0.804359243697479) 0%, rgba(251,251,251,1) 100%);
 }
 
 
 .navbar{
-    background-color: rgb(255, 255, 255) !important;
+    background: rgb(251,251,251);
+    background: linear-gradient(180deg, rgba(251,251,251,1) 0%, rgba(85,246,122,0.804359243697479) 100%);
 }
 
 .nav-link{
@@ -41,6 +43,16 @@ h1{
     text-align: center;
 
 }
+p{
+    font-size:100px;
+    font-style: italic;
+}
+h5{
+    color: rgb(8, 221, 75);
+}
+h3{
+    text-align: center;
+}
 
 .carousel-inner{
     
@@ -52,10 +64,12 @@ h1{
 }
 
 .carousel-item img{
-    max-width: 100%;
-    max-height: 100%;
-    margin: auto;
     box-shadow: rgba(255, 234, 234, 0.35) 0px 5px 15px;
+    width: 110%;
+    height: 850px;
+    object-fit: cover;
+
+
 }
 
 .img-logo{
@@ -86,3 +100,4 @@ h1{
     flex-wrap: wrap;
 
 }
+
