--- a/Javascript-inicial/Exercicio1/style.css
+++ b/Javascript-inicial/Exercicio1/style.css
@@ -28,12 +28,12 @@ section{
     
 }
 .s1{
-    display: flex;
+    display: auto;
     align-items: center;
     justify-content: center;
-    height: 5vh;
+    height: 150px;
     background-image: url("./assets/AssinaturaNey.png");
-    background-size: 100px;
+    background-size: 240px;
     background-repeat: no-repeat;
     background-position: center;
 }
@@ -41,10 +41,15 @@ section{
 h1{
     color: rgb(0, 0, 0);
     text-align: center;
+    margin-top: auto;
 
 }
+h2{
+    font-size: 500px;
+    margin-top: auto;
+}
 p{
-    font-size:100px;
+    font-size:16px;
     font-style: italic;
 }
 h5{
@@ -60,6 +65,7 @@ h3{
     justify-content: center;
     width: 30px;
     height: auto;
+    margin-top: auto;
 
 }
 
@@ -68,28 +74,40 @@ h3{
     width: 110%;
     height: 850px;
     object-fit: cover;
+    margin-top: auto;
 
 
 }
 
 .img-logo{
-
     width: 70px;
     height: auto;
-
 }
-.card{
- 
-    background-color: #020202a9;
-    width: 16rem;
-    height:450px;
-    border: 2px solid #ffffff;
-    border-radius: 10px;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
+
+.card {
+    margin-top: auto;
+    margin: 10px;
+    width: 18rem;
+   
+}
+.card img {
+    margin-top: auto;
+    width: 55%;
     align-items: center;
     justify-content: center;
+}
+.card-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-top: 20px;
+
+}
+
+.wrap-img-card{
+
+    align-items: center;
+    margin-top: auto;
 }
 #s2{
    
@@ -100,4 +118,55 @@ h3{
     flex-wrap: wrap;
 
 }
+.formulario{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: rgb(0, 0, 0);
+    background-color: rgba(255, 255, 255, 0.523);
+    width: 300px;
+    padding: 20px;
+    border-radius: 5px;
+    margin-top: auto;
+}
+#s4{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: auto;
+    padding:2vh 0px;
+}
+
+
+.formulario button{
+   padding: 10px;
+   border-radius: 999px;
+   width: 100%;
+   border: none;
+   background: none;
+   color: rgb(0, 0, 0);
+   border: 2px solid rgb(0, 0, 0);
+}
+
+.formulario button:hover{
+    color: black;
+    border: 2px solid black;
+    background: white;
+ }
+ 
+
+.formulario label{
+   text-align: left;
+   width: 100%;
+   margin-left: 40px
+ 
+ }
+
+.formulario input{
+    padding: 10px;
+    border-radius: 999px;
+    width: 100%;
+ }
 
